--- a/templates/random.html
+++ b/templates/random.html
@@ -3,7 +3,6 @@
   <head>
     <title>State Fun Facts</title>
   </head>
-  
   <body>
     <form action = "/facts">
        <label for = "state">Choose a State:</label>
@@ -11,11 +10,10 @@
         {{options}}
        </select>
        <br><br>
-       <input type="submit" value = "Get A Fun Fact!">
+       <input type="submit" value = "Submit">
     </form>
     
     <p>{{funFact}}</p>
     
   </body>
-
 </html>
