--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
     <title>State Fun Facts</title>
   </head>
   <body>
-    <form action = "/facts">
+    <form action = "/facts" method = "post">
        <label for = "state">Choose a State:</label>
        <select name="state" id="state">
         {{options}}
